[gd_scene load_steps=2 format=3 uid="uid://co1b5n5r2it6"]

[ext_resource type="Script" path="res://minigame/minigame.gd" id="1_nmr3p"]

[node name="minigame" type="Node2D"]
script = ExtResource("1_nmr3p")

[node name="MinigameHud" type="CanvasLayer" parent="."]

[node name="TimerDisplay" type="Label" parent="MinigameHud"]
offset_right = 75.0
offset_bottom = 42.0
text = "-1"

[node name="Button" type="Button" parent="MinigameHud"]
offset_left = 22.0
offset_top = 1.0
offset_right = 152.0
offset_bottom = 32.0
action_mode = 0
text = "Return to Cabin"

[node name="MinigameTimer" type="Timer" parent="."]
